--- a/go-trip/css/style.css
+++ b/go-trip/css/style.css
@@ -195,6 +195,10 @@ body._lock {
   line-height: 30px;
 }
 
+.header__logo:hover {
+  color: #000;
+}
+
 .header__logo._active {
   display: none;
 }
@@ -291,17 +295,22 @@ body._lock {
   justify-content: center;
   align-items: center;
   padding: 0 44px;
+  color: #fff;
+}
+
+.menu__list-link-sign-up:hover {
+  background: linear-gradient(100.54deg, #ff7b4e 5.57%, #ff584e 70.03%), #fff;
+  cursor: pointer;
+}
+
+.menu__list-link-sign-up:hover .menu__sign-up {
+  color: #000;
 }
 
 .menu__sign-up {
   display: flex;
-  color: #fff;
   align-items: center;
   justify-content: center;
-}
-
-.menu__sign-up:hover {
-  color: #000;
 }
 
 .menu__link {
@@ -574,7 +583,7 @@ body {
 }
 
 .main-scene__title {
-  font-size: calc(23px + 32 * ((100vw - 320px) / 1120));
+  font-size: calc(23px + 32 * ((100vw - 320px) / 1600));
   font-family: Poppins;
   font-style: normal;
   font-weight: 600;
@@ -1030,21 +1039,6 @@ body {
   }
 
   .menu__login:hover {
-    color: #333 !important;
-  }
-
-  .menu__sign-up {
-    font-family: Poppins;
-    font-style: normal;
-    font-weight: bold;
-    font-size: 14px;
-    line-height: 18px;
-    text-align: center;
-    text-transform: uppercase;
-    color: #000000;
-  }
-
-  .menu__sign-up:hover {
     color: #333 !important;
   }
 
