Add mobile menu

--- a/#src/style/scss/_vars.scss
+++ b/#src/style/scss/_vars.scss
@@ -2,8 +2,8 @@
   --header-width-container: 1408px;
   --header-bg-color: unset;
   --header-font-family: Poppins;
-  --header-bg-color-mobile: unset;
-  --header-bg-menu-body-mobile: unset;
-  --header-bg-menu-icon-mobile: #000000;
+  --header-bg-color-mobile: #000;
+  --header-bg-menu-body-mobile: #1f5e37;
+  --header-bg-menu-icon-mobile: #ffffff;
   --header-menu-link-color: #ffffff;
 }
