--- a/go-trip/css/style.css
+++ b/go-trip/css/style.css
@@ -133,9 +133,9 @@ h6 {
   --header-width-container: 1408px;
   --header-bg-color: unset;
   --header-font-family: Poppins;
-  --header-bg-color-mobile: unset;
-  --header-bg-menu-body-mobile: unset;
-  --header-bg-menu-icon-mobile: #000000;
+  --header-bg-color-mobile: #000;
+  --header-bg-menu-body-mobile: #1f5e37;
+  --header-bg-menu-icon-mobile: #ffffff;
   --header-menu-link-color: #ffffff;
 }
 
@@ -143,9 +143,9 @@ h6 {
   --header-width-container: 1408px;
   --header-bg-color: unset;
   --header-font-family: Poppins;
-  --header-bg-color-mobile: unset;
-  --header-bg-menu-body-mobile: unset;
-  --header-bg-menu-icon-mobile: #000000;
+  --header-bg-color-mobile: #000;
+  --header-bg-menu-body-mobile: #1f5e37;
+  --header-bg-menu-icon-mobile: #ffffff;
   --header-menu-link-color: #ffffff;
 }
 
@@ -223,7 +223,6 @@ body._lock {
   display: grid;
   -moz-column-gap: 24px;
   column-gap: 24px;
-  row-gap: 41px;
   align-items: center;
   grid-template-areas: "menu__nav log-in-out";
   justify-items: start;
@@ -1086,13 +1085,47 @@ body {
   .menu__login:hover {
     color: #333 !important;
   }
+}
+
+@media (max-width: 991px) {
+  .header__container {
+    flex-direction: column;
+    padding: 26px 0;
+    justify-content: center;
+    margin: 0 20px;
+  }
+
+  .menu__body {
+    row-gap: 41px;
+  }
+
+  .menu__nav {
+    justify-content: center;
+  }
+
+  .menu__list {
+    flex-direction: column;
+    row-gap: 80px;
+  }
+
+  .log-in-out {
+    flex-direction: column;
+    row-gap: 25px;
+  }
+
+  .header__block-logo {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    align-items: center;
+  }
 
   .menu__body {
     z-index: 2;
     display: grid;
     grid-gap: 14px;
-    grid-template-areas: "menu__list-link-login" "menu__list-link-log-up" "menu__nav";
-    grid-template-rows: 20px 20px 1fr 20px 1fr;
+    grid-template-areas: "menu__nav" "log-in-out";
+    grid-template-rows: 1fr 0.3fr;
     grid-template-columns: 1fr;
     padding: 0 0 24px 0;
   }
@@ -1117,7 +1150,6 @@ body {
     width: 18px;
     height: 12px;
     cursor: pointer;
-    top: -22px;
   }
 
   .menu__icon span,
@@ -1198,7 +1230,7 @@ body {
     top: 0;
     left: 0;
     width: 100%;
-    height: 54px;
+    height: 100px;
     background-color: var(--header-bg-color-mobile);
     z-index: 2;
   }
@@ -1208,12 +1240,11 @@ body {
     text-align: center;
     font-family: Poppins;
     font-style: normal;
-    font-size: 14px;
     line-height: 18px;
   }
 
   .menu__link:hover {
-    color: #cd1319;
+    color: #000000;
   }
 }
 @supports (-webkit-appearance:none){
@@ -1229,6 +1260,14 @@ body {
 }
 
  @media (max-width: 1199px){
+
+@supports (-webkit-appearance:none){
+
+}
+
+}
+
+ @media (max-width: 991px){
 
 @supports (-webkit-appearance:none){
 
