--- a/#src/style/scss/style.scss
+++ b/#src/style/scss/style.scss
@@ -78,7 +78,8 @@ body {
   height: 100vh;
 
   &__bg {
-    width: 1440px;
+    max-width: 1440px;
+    width: 100%;
     background-image: url(../img/index/main/main-bg.png);
     background-repeat: no-repeat;
     height: 100vh;
@@ -283,18 +284,28 @@ body {
 .slider {
   &__info {
     flex: 0 0 60%;
+    @media (max-width: 767px) {
+    flex: 0 0 100%;
+    }
   }
+
   &__container {
     display: flex;
     background-color: #e5e5e5;
     padding: 0 0 0 100px;
     padding-bottom: 100px;
     overflow: hidden;
+      @media (max-width: 767px) {
+   flex-wrap: wrap;
+    }
   }
 }
 
 .info {
   flex: 0 0 40%;
+  @media (max-width: 767px) {
+    flex: 0 0 100%;
+    }
   &__title {
     display: flex;
     font-family: Poppins;
