--- a/#src/style/scss/style.scss
+++ b/#src/style/scss/style.scss
@@ -380,13 +380,22 @@ body {
   background-color: #e5e5e5;
   display: flex;
   column-gap: 68px;
+    @media (max-width: 767px) {
+    flex-wrap: wrap;
+    }
 
   &__container {
     padding: 143px 100px;
+      @media (max-width: 767px) {
+    padding: 20px 20px;
+    }
   }
 
   &__photo {
     flex: 0 0 38.5%;
+     @media (max-width: 767px) {
+    flex: 0 0 100%;
+    }
   }
 
   &__img {
@@ -395,6 +404,9 @@ body {
 
   &__info {
     flex: 0 0 61.5%;
+       @media (max-width: 767px) {
+    flex: 0 0 100%;
+    }
   }
 
   &__title {
