--- a/#src/style/scss/style.scss
+++ b/#src/style/scss/style.scss
@@ -532,6 +532,9 @@ body {
 
   &__container {
     padding: 105px 100px;
+      @media (max-width: 767px) {
+    padding: 105px 20px;
+    }
   }
 
   &__block {
@@ -546,7 +549,8 @@ body {
   }
 
   &__title {
-    width: 519px;
+        max-width: 519px;
+    width: 100%;
     font-family: Poppins;
     font-style: normal;
     font-weight: 500;
@@ -606,6 +610,9 @@ body {
 
   &__container {
     padding: 21px 106px 106px 106px;
+      @media (max-width: 767px) {
+    padding: 21px 20px;
+    }
   }
 
   &__title {
@@ -620,7 +627,8 @@ body {
   }
 
   &__block {
-    width: 800px;
+    max-width: 800px;
+    width: 100%;
     background: linear-gradient(0deg, #ffffff, #ffffff), #c4c4c4;
     border-radius: 35px;
     padding: 12px 15px 12px 46px;
