--- a/go-trip/css/style.css
+++ b/go-trip/css/style.css
@@ -905,7 +905,8 @@ body {
 }
 
 .exploring__title {
-  width: 519px;
+  max-width: 519px;
+  width: 100%;
   font-family: Poppins;
   font-style: normal;
   font-weight: 500;
@@ -983,7 +984,8 @@ body {
 }
 
 .subscripe__block {
-  width: 800px;
+  max-width: 800px;
+  width: 100%;
   background: linear-gradient(0deg, #ffffff, #ffffff), #c4c4c4;
   border-radius: 35px;
   padding: 12px 15px 12px 46px;
@@ -1276,6 +1278,14 @@ body {
 
   .reviews-tourists__info {
     flex: 0 0 100%;
+  }
+
+  .exploring__container {
+    padding: 105px 20px;
+  }
+
+  .subscripe__container {
+    padding: 21px 20px;
   }
 }
 @supports (-webkit-appearance:none){
